<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/icon">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#9DB1CC">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/enter"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/darkblue"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical">
        <EditText
            android:id="@+id/login"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="70dp"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/reg"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/b"
             android:onClick="reg"
            android:text="@string/reg"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="30dp" />
        <Button
            android:id="@+id/sign"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/b"
            android:onClick="nextekr"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="30dp" />

    </LinearLayout>

</LinearLayout>


